--- a/.github/workflows/helloworld.yaml
+++ b/.github/workflows/helloworld.yaml
@@ -4,5 +4,8 @@ jobs:
   my-job:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: my-step
         run: echo "Hello World!"
+      - name: goaway
+        run: bash hello.sh 
